BUG#43076: rpl.rpl_idempotency fails sporadically on pushbuild

There were some valgrind warnings in strlen. This happened 
because SHOW SLAVE STATUS connection thread would race with 
SQL thread for the error message buffer. Sometimes the connection
thread was getting a half way completed message (ie, string 
without NULL terminator, causing valgrind to complain with: 
"Conditional jump or move depends on uninitialised value(s)".
      
This patch addresses this issue by synchronizing the error object
between IO/SQL thread and user thread on SHOW SLAVE STATUS.